[gd_scene load_steps=31 format=2]

[ext_resource path="res://Fonts/911Fonts.com_CenturyGothicRegular__-_911fonts.com_fonts_mhpY.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/pause_screen.gd" type="Script" id=2]
[ext_resource path="res://Art/replay_plane.png" type="Texture" id=3]
[ext_resource path="res://Art/back_step.png" type="Texture" id=4]
[ext_resource path="res://Art/light.png" type="Texture" id=5]
[ext_resource path="res://Scripts/SoundGameOverScreen.gd" type="Script" id=6]
[ext_resource path="res://Art/win_cup.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 0.996078, 0.94902, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.882353, 0.729412, 0.109804, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 1265, 1265 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
modulate_color = Color( 0.788235, 0.780392, 0.666667, 1 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 1265, 1265 )
modulate_color = Color( 0.658824, 0.654902, 0.568627, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1265, 1265 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
modulate_color = Color( 0.788235, 0.780392, 0.666667, 1 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1265, 1265 )
modulate_color = Color( 0.658824, 0.654902, 0.568627, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=8]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 70
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 20
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 0.996078, 0.94902, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.882353, 0.729412, 0.109804, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 20

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 1265, 1265 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
modulate_color = Color( 0.788235, 0.780392, 0.666667, 1 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 1265, 1265 )
modulate_color = Color( 0.658824, 0.654902, 0.568627, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxTexture" id=15]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1265, 1265 )
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
modulate_color = Color( 0.788235, 0.780392, 0.666667, 1 )

[sub_resource type="StyleBoxTexture" id=16]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 1265, 1265 )
modulate_color = Color( 0.658824, 0.654902, 0.568627, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=18]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=19]
size = 75
use_filter = true
extra_spacing_top = -13
extra_spacing_bottom = -11
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=20]
size = 25
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StreamTexture" id=21]
flags = 4
load_path = "res://.import/win_cup.png-45f6dbb9cb9ec0bfa8bf528218fdb3f0.stex"

[sub_resource type="DynamicFont" id=22]
size = 40
use_filter = true
extra_spacing_top = -8
extra_spacing_bottom = -8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=23]
size = 18
use_filter = true
font_data = ExtResource( 1 )

[node name="pause_screen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0.290196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverPanel_NewScore" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.0
margin_top = -291.5
margin_right = 198.0
margin_bottom = 195.5
rect_min_size = Vector2( 396, 158 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverPanel_NewScore"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -72.0
margin_right = 63.0
margin_bottom = -24.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackStepButton" type="Button" parent="GameOverPanel_NewScore/HBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ReplayButton" type="Button" parent="GameOverPanel_NewScore/HBoxContainer"]
margin_left = 78.0
margin_right = 126.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="text" type="Label" parent="GameOverPanel_NewScore"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -145.0
margin_top = 14.0
margin_right = 145.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.788235, 0.780392, 0.666667, 1 )
text = "CONGRATULATIONS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Cup_icon" type="Control" parent="GameOverPanel_NewScore"]
anchor_left = 0.5
anchor_right = 0.5
margin_top = 186.0
margin_bottom = 186.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shine" type="TextureRect" parent="GameOverPanel_NewScore/Cup_icon"]
modulate = Color( 1, 0.831373, 0.470588, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -142.0
margin_right = 110.0
margin_bottom = 78.0
rect_min_size = Vector2( 220, 220 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="GameOverPanel_NewScore/Cup_icon"]
modulate = Color( 0.882353, 0.729412, 0.109804, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -75.0
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 150, 150 )
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="GameOverPanel_NewScore"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 28.5
margin_bottom = 115.5
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.882353, 0.729412, 0.109804, 1 )
text = "123"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="GameOverPanel_NewScore/HighScore"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -6.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.882353, 0.729412, 0.109804, 1 )
text = " New High Score"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -198.0
margin_top = -222.0
margin_right = 198.0
margin_bottom = 142.0
rect_min_size = Vector2( 396, 158 )
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -72.0
margin_right = 63.0
margin_bottom = -24.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackStepButton" type="Button" parent="GameOverPanel/HBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/normal = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="ReplayButton" type="Button" parent="GameOverPanel/HBoxContainer"]
margin_left = 78.0
margin_right = 126.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="text" type="Label" parent="GameOverPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -145.06
margin_top = 18.0594
margin_right = 144.94
margin_bottom = 56.0594
custom_fonts/font = SubResource( 18 )
custom_colors/font_color = Color( 0.788235, 0.780392, 0.666667, 1 )
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -108.0
margin_bottom = 82.0
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentScore" type="Label" parent="GameOverPanel/VBoxContainer"]
margin_right = 396.0
margin_bottom = 69.0
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
custom_fonts/font = SubResource( 19 )
custom_colors/font_color = Color( 0.882353, 0.729412, 0.109804, 1 )
text = "4920"
align = 1
valign = 1

[node name="Title" type="Label" parent="GameOverPanel/VBoxContainer/CurrentScore"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -198.0
margin_top = 1.0
margin_right = 198.0
margin_bottom = 33.0
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
custom_fonts/font = SubResource( 20 )
custom_colors/font_color = Color( 0.882353, 0.729412, 0.109804, 1 )
text = "Score"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="CenterContainer" parent="GameOverPanel/VBoxContainer"]
margin_top = 129.0
margin_right = 396.0
margin_bottom = 190.0
size_flags_stretch_ratio = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="GameOverPanel/VBoxContainer/HighScore"]
margin_left = 116.0
margin_right = 280.0
margin_bottom = 61.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="icon" type="TextureRect" parent="GameOverPanel/VBoxContainer/HighScore/HBoxContainer"]
modulate = Color( 0.882353, 0.729412, 0.109804, 1 )
margin_left = -1.0
margin_top = 5.0
margin_right = 49.0
margin_bottom = 55.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel/VBoxContainer/HighScore/HBoxContainer"]
margin_left = 54.0
margin_right = 164.0
margin_bottom = 61.0

[node name="Score" type="Label" parent="GameOverPanel/VBoxContainer/HighScore/HBoxContainer/VBoxContainer"]
margin_right = 110.0
margin_bottom = 34.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 22 )
custom_colors/font_color = Color( 0.882353, 0.729412, 0.109804, 1 )
text = "40466"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="GameOverPanel/VBoxContainer/HighScore/HBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 110.0
margin_bottom = 61.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 23 )
custom_colors/font_color = Color( 0.882353, 0.729412, 0.109804, 1 )
text = "HIGH SCORE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Sound" type="Node" parent="."]
script = ExtResource( 6 )
[connection signal="ready" from="." to="Sound" method="_on_pause_screen_ready"]
[connection signal="gui_input" from="ColorRect" to="." method="_on_ColorRect_gui_input"]
[connection signal="pressed" from="GameOverPanel_NewScore/HBoxContainer/BackStepButton" to="." method="_on_BackStepButton_pressed"]
[connection signal="pressed" from="GameOverPanel_NewScore/HBoxContainer/BackStepButton" to="Sound" method="_on_BackStepButton_pressed"]
[connection signal="pressed" from="GameOverPanel_NewScore/HBoxContainer/ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="pressed" from="GameOverPanel_NewScore/HBoxContainer/ReplayButton" to="Sound" method="_on_ReplayButton_pressed"]
[connection signal="pressed" from="GameOverPanel/HBoxContainer/BackStepButton" to="." method="_on_BackStepButton_pressed"]
[connection signal="pressed" from="GameOverPanel/HBoxContainer/BackStepButton" to="Sound" method="_on_BackStepButton_pressed"]
[connection signal="pressed" from="GameOverPanel/HBoxContainer/ReplayButton" to="." method="_on_ReplayButton_pressed"]
[connection signal="pressed" from="GameOverPanel/HBoxContainer/ReplayButton" to="Sound" method="_on_ReplayButton_pressed"]
